--- a/_posts/2023-06-01-tutor-博客搭建指南.md
+++ b/_posts/2023-06-01-tutor-博客搭建指南.md
@@ -15,7 +15,8 @@ tags:
 - Github Pages + jekyll
 - 官方文档
 
->
+> https://jekyllrb.com/docs/​
+> https://docs.github.com/en/pages
 
 ## 我的方案
 
@@ -89,7 +90,7 @@ tags:
 
 ## 飞书转 md
 
-- 软件 —— `feishu2md`
+- 软件 —— [`feishu2md`](https://github.com/Wsine/feishu2md)
 - 无需添加到 `PATH`，直接解压后在当前文件夹下
 
 ```yaml
