--- a/_posts/2023-06-01-tutor-博客搭建指南.md
+++ b/_posts/2023-06-01-tutor-博客搭建指南.md
@@ -84,7 +84,7 @@ tags:
 | category、categories | 除过将博客文章放在某个文件夹下面外，你还可以指定博客的一个或者多个分类属性。这样当你的站点生成后，这些文章就可以根据这些分类来阅读。categories 可以通过 YAML list，或者以逗号隔开的字符串指定。 |
 | tags                 | 类似分类 categories，一篇文章也可以给它增加一个或者多个标签。同样，tags 可以通过 YAML 列表或者以逗号隔开的字符串指定。                                                                          |
 
-- 除了这些预定义的变量，也可以自定义变量，然后在布局文件中 `{{ page.自定义变量 }}` 来引用
+- 除了这些预定义的变量，也可以自定义变量，然后在布局文件中 "{{ page.自定义变量 }}" 来引用
 - 设置 date 的时候，如果加上了具体时间（小时：分钟：秒），必须在后面写上 `+0800`（时区偏移），否则将不会生成该文章页面
 - YAML 语法是不允许用 `tab` 来缩进，只能用空格。
 
