--- a/_posts/2023-06-01-tutor-博客搭建指南.md
+++ b/_posts/2023-06-01-tutor-博客搭建指南.md
@@ -12,44 +12,42 @@ tags:
 
 ## 基础框架
 
-- Github Pages + jekyll
-- 官方文档
-
-> https://jekyllrb.com/docs/​
-> https://docs.github.com/en/pages
+- [Github Pages](https://docs.github.com/en/pages) 
+- [jekyll](https://docs.github.com/en/pages)
 
 ## 我的方案
 
 1. Fork 别人的网页
 
-> 我用的是[黄玄](https://link.jianshu.com/?t=https%3A%2F%2Fhuangxuan.me%2F)大神的博客模板，[github 仓库](https://link.jianshu.com/?t=https%3A%2F%2Fgithub.com%2FHuxpro%2Fhuxpro.github.io)在这里，进入仓库，点击 Fork<br/>[github.com](https://github.com/Huxpro/huxpro.github.io/blob/master/_doc/README.zh.md) 帮助文档
+> 我用的是[黄玄](https://link.jianshu.com/?t=https%3A%2F%2Fhuangxuan.me%2F)大神的博客模板，[github 仓库](https://link.jianshu.com/?t=https%3A%2F%2Fgithub.com%2FHuxpro%2Fhuxpro.github.io)在这里，进入仓库，点击 Fork
+> [github.com](https://github.com/Huxpro/huxpro.github.io/blob/master/_doc/README.zh.md) 帮助文档
 
-1. 重命名仓库
+2. 重命名仓库
 
-> .github.io，`` 就是你的 github 用户名
+> username.github.io，`username` 就是你的 github 用户名
 
-1. 创建 github codespace，用来编辑以及 git
-2. 在环境中安装 Ruby and Bundler
-3. 在终端，Installed dependencies in the Gemfile:
+3. 创建 github codespace，用来编辑以及 git
+4. 在环境中安装 Ruby and Bundler
+5. 在终端，Installed dependencies in the Gemfile:
 
 ```
 bundle install
 ```
 
-1. 修改 jekyll 目录
-2. `_config.yml` 配置
-3. `_posts` 文件夹下放文章
-4. `img` 文件夹下放图片
-5. `Gemfile` 和 `Gemfile.lock` 文件，这两个文件是用来管理整个项目的依赖的。主题就是在 `Gemfile` 中指定的，可以在 `gem` 属性中找到
-6. `_site` 文件夹：一旦 Jekyll 完成转换，就会将生成的页面放在这里（默认）。最好将这个目录放进你的 `.gitignore` 文件中。
-7. 在本地，Serve the website (`loc``alhost:4000` by default):
+6. 修改 jekyll 目录
+   1. `_config.yml` 配置
+   2. `_posts` 文件夹下放文章
+   3. `img` 文件夹下放图片
+   4. `Gemfile` 和 `Gemfile.lock` 文件，这两个文件是用来管理整个项目的依赖的。主题就是在 `Gemfile` 中指定的，可以在 `gem` 属性中找到
+   5. `_site` 文件夹：一旦 Jekyll 完成转换，就会将生成的页面放在这里（默认）。最好将这个目录放进你的 `.gitignore` 文件中。
+7.  在本地，Serve the website (`localhost:4000` by default):
 
 ```shell
 bundle exec jekyll serve --livereload
 # livereload 相当于前端开发中自动刷新浏览器
 ```
 
-1. 提交到 github 上，需要等待几分钟才会更新。
+8. 提交到 github 上，需要等待几分钟才会更新。
 
 ## 配置
 
