--- a/_posts/2023-06-01-tutor-博客搭建指南.md
+++ b/_posts/2023-06-01-tutor-博客搭建指南.md
@@ -86,7 +86,7 @@ tags:
 - 设置 date 的时候，如果加上了具体时间（小时：分钟：秒），必须在后面写上 `+0800`（时区偏移），否则将不会生成该文章页面
 - YAML 语法是不允许用 `tab` 来缩进，只能用空格。
 
-## 飞书转 md
+## 飞书转 md（存在一些问题不建议使用）
 
 - 软件 —— [`feishu2md`](https://github.com/Wsine/feishu2md)
 - 无需添加到 `PATH`，直接解压后在当前文件夹下
