--- a/_posts/2023-06-01-tutor-博客搭建指南.md
+++ b/_posts/2023-06-01-tutor-博客搭建指南.md
@@ -18,8 +18,7 @@ tags:
 ## 我的方案
 
 1. Fork 别人的网页
-> 我用的是[黄玄](https://link.jianshu.com/?t=https%3A%2F%2Fhuangxuan.me%2F)大神的博客模板，[github 仓库](https://link.jianshu.com/?t=https%3A%2F%2Fgithub.com%2FHuxpro%2Fhuxpro.github.io)在这里，进入仓库，点击 Fork
-> [github.com](https://github.com/Huxpro/huxpro.github.io/blob/master/_doc/README.zh.md) 帮助文档
+> 我用的是[黄玄](https://link.jianshu.com/?t=https%3A%2F%2Fhuangxuan.me%2F)大神的博客模板，[github 仓库](https://link.jianshu.com/?t=https%3A%2F%2Fgithub.com%2FHuxpro%2Fhuxpro.github.io)在这里，进入仓库，点击 Fork。帮助文档：[github.com](https://github.com/Huxpro/huxpro.github.io/blob/master/_doc/README.zh.md) 
 2. 重命名仓库
 > username.github.io，`username` 就是你的 github 用户名
 3. 创建 github codespace，用来编辑以及 git
