--- a/_posts/2023-12-31-annualReport-2023年度总结.md
+++ b/_posts/2023-12-31-annualReport-2023年度总结.md
@@ -12,4 +12,22 @@ tags:
 
 ## 生活
 
+### 旅行
 
+### 读书
+
+### 电影
+
+### 娱乐
+
+## 学习
+
+## 情感
+
+### 宛妘
+
+2023年是我与宛妘携手走过的第二个春秋。在这时光流转的一年里，我们不仅品味了生活的酸甜苦辣，更在彼此陪伴中共同绽放成长的芬芳。
+
+年初因为宛妘家人身体原因，wo
+
+### 爷爷
