--- a/_posts/2023-12-31-annualReport-2023年度总结.md
+++ b/_posts/2023-12-31-annualReport-2023年度总结.md
@@ -28,6 +28,18 @@ tags:
 
 2023年是我与宛妘携手走过的第二个春秋。在这时光流转的一年里，我们不仅品味了生活的酸甜苦辣，更在彼此陪伴中共同绽放成长的芬芳。
 
-年初因为宛妘家人身体原因，wo
+年初因为宛妘家人身体原因，我们去了郑州拜访了宛妘的叔叔阿姨。
+
+![2023-1_zhengzhou_1](../img/2023_annual_report/2023-1_zhengzhou_1.jpg)
+
+![2023-1_zhengzhou_2](../img/2023_annual_report/2023-1_zhengzhou_2.jpg)
+
+![2023-1_zhengzhou_3](../img/2023_annual_report/2023-1_zhengzhou_3.jpg)
+
+![2023-1_zhengzhou_4](../img/2023_annual_report/2023-1_zhengzhou_4.jpg)
+
+春节在我家过的，宛妘第一次去我的家乡，第一次见到了我的父母。
+
+<video src="../img/2023_annual_report/VID_20230121_191624_HSR_120.mp4" width="800px" height="600px" controls="controls"></video>
 
 ### 爷爷
