--- a/_posts/2023-12-31-annualReport-2023年度总结.md
+++ b/_posts/2023-12-31-annualReport-2023年度总结.md
@@ -31,6 +31,7 @@ tags:
 年初因为宛妘家人身体原因，我们去了郑州拜访了宛妘的叔叔阿姨。
 
 ![2023-1_zhengzhou_1](../img/2023_annual_report/2023-1_zhengzhou_1.jpg)
+<img src="../img/2023_annual_report/2023-1_zhengzhou_1.jpg" alt="切肉">
 
 ![2023-1_zhengzhou_2](../img/2023_annual_report/2023-1_zhengzhou_2.jpg)
 
