--- a/_posts/2023-12-31-annualReport-2023年度总结.md
+++ b/_posts/2023-12-31-annualReport-2023年度总结.md
@@ -38,6 +38,8 @@ tags:
 
 ![2023-1_zhengzhou_4](../img/2023_annual_report/2023-1_zhengzhou_4.jpg)
 
+<video src="../img/2023_annual_report/VID_20230121_191624_HSR_120.mp4"></video>
+
 春节在我家过的，宛妘第一次去我的家乡，第一次见到了我的父母。
 
 <video src="../img/2023_annual_report/VID_20230121_191624_HSR_120.mp4" width="800px" height="600px" controls="controls"></video>
