--- a/_posts/2023-12-31-annualReport-2023年度总结.md
+++ b/_posts/2023-12-31-annualReport-2023年度总结.md
@@ -30,7 +30,9 @@ tags:
 
 年初因为宛妘家人身体原因，我们去了郑州拜访了宛妘的叔叔阿姨。
 
-![2023-1_zhengzhou_1](../img/2023_annual_report/2023-1_zhengzhou_1.jpg)
+![2023-1_zhengzhou_1](https://github.com/constant-007/constant-007.github.io/blob/master/img/2023_annual_report/2023-1_zhengzhou_1.jpg)
+
+![](https://pbs.twimg.com/media/GC9MBVgX0AAPZhi?format=jpg&name=900x900)
 
 ![2023-1_zhengzhou_2](../img/2023_annual_report/2023-1_zhengzhou_2.jpg)
 
@@ -38,7 +40,7 @@ tags:
 
 ![2023-1_zhengzhou_4](../img/2023_annual_report/2023-1_zhengzhou_4.jpg)
 
-<video src="../img/2023_annual_report/VID_20230121_191624_HSR_120.mp4"></video>
+<video src="https://twitter.com/i/status/1742674488171602305"></video>
 
 春节在我家过的，宛妘第一次去我的家乡，第一次见到了我的父母。
 
