--- a/_posts/2025-06-09-云服务器配置.md
+++ b/_posts/2025-06-09-云服务器配置.md
@@ -1,6 +1,6 @@
 ---
 layout:       post
-title:        "云服务器配置"
+title:        "云服务器配置(1)--基础篇+docker+VPN代理"
 author:       "小星星也变奏"
 header-style: text
 catalog:      true
@@ -24,26 +24,101 @@ apt install git
 ```
 3. 安装docker
 ```
-https://blog.csdn.net/sinat_39327967/article/details/146906125 # TODO
+wget https://download.docker.com/linux/static/stable/x86_64/docker-28.0.4.tgz
+tar -xzf docker-28.0.4.tgz
+sudo systemctl stop docker
+vim /etc/systemd/system/docker.service
 ```
-1. 安装docker-compose
+
 ```
-#TODO
+[Unit]
+Description=Docker Application Container Engine
+Documentation=https://docs.docker.com
+After=network-online.target firewalld.service
+Wants=network-online.target
+
+[Service]
+Type=notify
+ExecStart=/usr/bin/dockerd
+ExecReload=/bin/kill -s HUP $MAINPID
+LimitNOFILE=infinity
+LimitNPROC=infinity
+TimeoutStartSec=0
+Delegate=yes
+KillMode=process
+Restart=on-failure
+StartLimitBurst=3
+StartLimitInterval=60s
+
+[Install]
+WantedBy=multi-user.target
 ```
-1. 安装conda
+
+```
+chmod +x /etc/systemd/system/docker.service
+
+systemctl daemon-reload
+
+systemctl enable docker.service
+
+systemctl start docker
+
+docker run hello-world
+```
+
+4. 安装docker-compose
+```
+wget https://github.com/docker/compose/releases/download/v2.34.0/docker-compose-linux-x86_64
+
+mv docker-compose-linux-x86_64 /usr/local/bin
+
+mv docker-compose-linux-x86_64 docker-compose
+
+sudo chmod +x /usr/local/bin/docker-compose
+
+sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
+
+docker-compose --version
+```
+> note: 这种只能用docker-compose，而不能用docker compose。原因是当前的docker是通过官方的二进制包进行的安装，没有自动包含compose插件。现在的docker-compose是单独的二进制文件，不会自动被docker命令识别。
+
+5. 安装conda
 ```
 wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
 bash Miniconda3-latest-Linux-x86_64.sh
 ```
-1. glider docker
+
+6. glider docker
 
 - 导入位于阿里云盘-备份文件-工作备份的`glider-docker`文件夹
-- 启动
+- 阿里云镜像容器拉镜像 `sudo docker pull registry.cn-hangzhou.aliyuncs.com/dinghongru/glider`
+- 启动 `export CURRENT_UID=$(id -u) && export CURRENT_GID=$(id -g) && docker-compose up -d`
+
+7. docker添加代理
 
 ```
-export CURRENT_UID=$(id -u)
-export CURRENT_GID=$(id -g)
-docker-compose up -d
+sudo mkdir -p /etc/systemd/system/docker.service.d
+
+sudo vim /etc/systemd/system/docker.service.d/http-proxy.conf
+
+   [Service]
+   Environment="HTTP_PROXY=http://127.0.0.1:8444" "HTTPS_PROXY=http://127.0.0.1:8444" "NO_PROXY=localhost,127.0.0.1"
+
+systemctl daemon-reload
+
+systemctl restart docker
+
+systemctl show --property=Environment docker
 ```
 
-1. 设置
+8. conda添加代理
+
+`vim ~/.condarc`
+
+```
+proxy_servers:
+  http: http://127.0.0.1:8444
+  https: http://127.0.0.1:8444
+```
+
+`conda config --show proxy_servers`
